force-app/force-app/force-app/main/default/objects/Sales_Plan__c/Sales_Plan__c.object-meta.xml
<CustomObject>
    <label>Sales Plan</label>
    <nameField>
        <displayFormat>SP-{000}</displayFormat>
        <label>Sales Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>