force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/NM_BL__c.field-meta.xml
<CustomField>
    <fullName>NM_BL__c</fullName>
    <formula>TEXT( Product__r.NM_Bl__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NM/BL</label>
    <type>Text</type>
</CustomField>