force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/Plan_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Plan_Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>