force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Plans</relationshipLabel>
    <relationshipName>Sales_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>