force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>TEXT( Product__r.Size__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Size</label>
    <type>Text</type>
</CustomField>