force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/Total_Qty_Planned__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Planned__c</fullName>
    <label>Total Qty Planned</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>