force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <formula>TEXT( Product__r.Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Version</label>
    <type>Text</type>
</CustomField>