force-app/force-app/force-app/main/default/objects/Sales_Plan__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Month__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day 01-Day 07</fullName>
            </value>
            <value>
                <fullName>Day 08-Day 15</fullName>
            </value>
            <value>
                <fullName>Day 16-Day 23</fullName>
            </value>
            <value>
                <fullName>Day 24-Day 31</fullName>
            </value>
            <value>
                <fullName>Day 24-Day 30</fullName>
            </value>
            <value>
                <fullName>Day 24-Day 28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>