force-app/force-app/force-app/main/default/objects/Sales_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>