force-app/force-app/force-app/main/default/objects/Sales_Plan__c/listViews/My_Sales_Plan.listView-meta.xml
<ListView>
    <fullName>My_Sales_Plan</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Month__c</columns>
    <columns>Product__c</columns>
    <columns>Total_Qty_Planned__c</columns>
    <columns>Total_Qty_Sold__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Sales Plan</label>
</ListView>